# connect4-zero

./: .gitignore  README.md  pyproject.toml  vercel.json
configs/: fast.yaml  turbo.yaml  v1.yaml
docs/: design.md  mcts_math.md
notebooks/: train_colab.ipynb
src/alphazero/: __init__.py  cli.py
src/alphazero/games/: __init__.py  base.py  connect4.py  tictactoe.py
src/alphazero/mcts/: __init__.py  batched.py  node.py  search.py
src/alphazero/net/: __init__.py  model.py
src/alphazero/play/: __init__.py  difficulty.py
src/connect4zero/: __init__.py  cli.py
src/connect4zero/eval/: __init__.py  arena.py
src/connect4zero/game/: __init__.py  connect4.py  encoding.py
src/connect4zero/mcts/: __init__.py  node.py  search.py
src/connect4zero/net/: __init__.py  export.py  model.py  train.py
src/connect4zero/selfplay/: __init__.py  buffer.py  worker.py
src/connect4zero/utils/: __init__.py  config.py  device.py  logging.py  seed.py
tests/: test_encoding.py  test_game_rules.py  test_mcts_invariants.py  test_training_smoke.py
web/: next.config.js  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: Connect4Game.tsx  DifficultySlider.tsx
web/lib/: ai.ts  game.ts  mcts.ts
web/public/: model.onnx  model.onnx.data  model_config.json
